--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
          <!-- 1º Commit Tu nombre y foto -->
         <img src="images/git.jpg">
         <h1 class="sidebar_information_title">
-          Escribe tu nombre
+          Luis Santiago Forero Heredia
         </h1>
       </div>
       <div class="comunidad-autoria">
         <div class="nombre">
           <!-- 2º Commit - Tu perfil Web -->
-          <p>Escribe tu perfil web</p>
+          <p></p>
         </div>
       </div>
     </section>
@@ -58,12 +58,12 @@
       </li>
       <li>
         <a href="#" target="_blank">
-          <p>LinkedIN</p>
+          <p>www.linkedin.com/in/luis-santiago-forero-heredia-8b8610272</p>
         </a>
       </li>
       <li>
         <a href="#" target="_blank">
-          <p>GitHub</p>
+          <p>https://github.com/Luis0248</p>
         </a>
       </li>
     </ul>
@@ -73,7 +73,7 @@
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
       <h3>¡Hola! Bienvenido</h3>
-      <p>Tu descripción</p>
+      <p>Soy estudiante de ingenieria de software en la universidad uniempresarial, de quinto semestre</p>
     </div>
 
     <div class="bloque">
