--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="layout-principal">
     <div class="bloque">
       <!-- 4º Commit - Tu presentación -->
-      <h3>¡Hola! Bienvenido</h3>
+      <h3>¡Hola!</h3>
       <p>Soy estudiante de ingenieria de software en la universidad uniempresarial, de quinto semestre</p>
     </div>
 
